Revision history for Module::Provision                           .

          - Clear dist_version and module_metadata after update_version
          - Release can optionally push to remote and upload test and CPAN
          - Install dist on test server vi test-upload command
          - TraitFor::Badges sets requires and now even quieter
          - Allow dashes in changlog entries
          - Git commit hook no longer adding version tag to message
          - Adding version to tag message when releasing
          - Default tag message tense reflects why not what
          - Dropped support for Module::Install
          - Added Test::ReportMetaData to dist.ini and share/dist.ini
          - Deleted t/01always_pass.t
          - Added localdir config attr for M:P:TF:Debian

0.40.1    2015-06-08 22:46:08
          - Added our own MetaData::Provider since PPI is *so* slow
          - Updated toolchain
          - Readded ShareDir to dist ini
          - Added cover method
          - Updated prereqs
          - Documented configuration options
          - Added public repo prefix to config options
          - Added TraitFor::Badges

0.39.1    2015-02-11 19:02:24
          - Fixed tests some more

0.38.1    2015-02-11 17:50:11
          - Fixed tests

0.37.1    2015-02-11 16:02:39
          - Made _license_keys public
          - Replaced C::U::TraitFor::MetaData with CPAN::Meta
          - Fixed appbase logic, again
          - Added module_metadate attribute
          - Can load multiple plugins. Comma separated list
          - Added loading of plugin module
          - Switched to private lexical subroutines
0
0.36.1    2014-10-28 13:45:12
          - Fixed spelling

0.35.11   2014-10-28 13:29:54
          - Added release method to ::VCS
          - Added t::boilerplate.pm
          - Add .pm files to prereq_diffs for build_requires
          - Ignore t/* files in prereq_diffs for requires
          - Replaced namespace::sweep with namespace::autoclean